# pypong

./: .gitignore  CHANGELOG.md  README.md  ball.py  manage.py  paddle.py  pong.py  pyproject.toml
.github/workflows/: build-and-publish-itch.yml  ci.yml
pypong/: ball.py  constants.py  paddle.py  pong.py  scene.py  utils.py
src/deja_bounce/: __main__.py  app.py  ball.py  constants.py  difficulty.py  paddle.py  scene.py  utils.py
src/deja_bounce/controllers/: __init__.py  cpu.py
src/deja_bounce/entities/: __init__.py  ball.py  common.py  paddle.py
src/deja_bounce/scenes/: __init__.py  base_menu_scene.py  commands.py  menu.py  models.py  overlays.py  pause.py  pong.py  systems.py
